--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/form_v1/style/style.css">
-  <link rel="shortcut icon" href="/form_v1/LOGO TIPO ITS - Copia.png" type="image/x-icon">
+  <link rel="shortcut icon" href="LOGO TIPO ITS - Copia.png" type="image/x-icon">
   <title>ITS Brasil</title>
   <style>
     /* CSS reset */
